# RAMP

./: .gitignore  README.md  dev_requirements.txt  example.manifest.yml  example2.manifest.yml  module_capabilities.py  module_metadata.py  module_unpacker.py  pyproject.toml  pyproject.toml.1  ramp.py  ramp.sh  requirements.txt  setup.py  test.py  test_cli_unpack.py  tox.ini  unpack_test.py
.circleci/: config.yml
.github/workflows/: codeql.yml  integration.yaml  publish-pypi.yml
RAMP/: __init__.py  commands_discovery.py  common.py  config.py  module_metadata.py  packer.py  ramp.py  unpacker.py  version.py
RAMP/disposableredis/: __init__.py
packer/: commands_discovery.py  module_metadata.py  module_packer  module_packer.py  test.py
packer/disposableredis/: __init__.py
unpacker/: module_metadata.py
