[tool.poetry]
name = "ramp-packer"
version = "2.2.0"
description = "Packs for Redis modules into a distributable format"
authors = ["RedisLabs"]
license = "BSD-2-Clause"
readme = "README.md"

packages = [
    { include = 'RAMP' }
]

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 2.7',
    'Programming Language :: Python :: 3.5',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',

]

[tool.poetry.scripts]
ramp = "RAMP.ramp:ramp"


[tool.poetry.dependencies]
python = "^2.7,<2.8 || >= 3.5.1"
redis = "^3.5.3"
PyYAML = "5.3.1"
click = "^6.7.0"
semantic-version = "^2.8.5"
typing = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
