[tool.poetry]
name = "ramp-packer"
version = "2.3.2"
description = "Packs for Redis modules into a distributable format"
authors = ["Redis OSS <oss@redis.com>"]
license = "BSD-2-Clause"
readme = "README.md"

packages = [
    { include = 'RAMP' }
]

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: BSD License',
    'Development Status :: 4 - Beta',

]

[tool.poetry.scripts]
ramp = "RAMP.ramp:ramp"


[tool.poetry.dependencies]
python = ">= 3.6,<4"
click = "^8"
semantic-version = "^2.8.5"
typing = "^3.0.0"
redis = "^4.1.0"
PyYAML = "^6.0"

[tool.poetry.dev-dependencies]
coverage = "^5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
